--- a/circle.yml
+++ b/circle.yml
@@ -6,8 +6,15 @@ dependencies:
   override:
     - docker info
     - docker pull insighttoolkit/cuberille-test
+    - ~/ITKCuberille/test/Docker/build.sh
 
 test:
   override:
     - ~/ITKCuberille/test/Docker/run.sh
 
+deployment:
+  hub:
+    branch: master
+    commands:
+      - docker login -e $DOCKER_EMAIL -u $DOCKER_USER -p $DOCKER_PASS
+      - docker push insighttoolkit/cuberille-test
