STYLE: Convert CMake-language commands to lower case
Ancient CMake versions required upper-case commands.  Later command names
became case-insensitive.  Now the preferred style is lower-case.

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,20 +1,20 @@
 # The header files
-SET(HEADERS
+set(HEADERS
   itkCuberilleImageToMeshFilter.h
 )
 
 # The implementation files
-SET(SOURCES
+set(SOURCES
   itkCuberilleImageToMeshFilter.txx
   examples.cxx
 )
 
 # Add this as include directory
-INCLUDE_DIRECTORIES(
+include_directories(
   ${CMAKE_SOURCE_DIR}
   ${SOURCE_PATH}
 )
 
 # Main library
-ADD_EXECUTABLE(Examples ${HEADERS} ${SOURCES})
-TARGET_LINK_LIBRARIES(Examples ${ITK_LIBRARIES} ITKQuadEdgeMesh)
+add_executable(Examples ${HEADERS} ${SOURCES})
+target_link_libraries(Examples ${ITK_LIBRARIES} ITKQuadEdgeMesh)
