BUG: Handle Non-Manifold Geometry
itk::QuadEdgeMesh enforces manifold geometry, and therefore cases
where vertices appear at the same physical location must be handled
carefully.  A bugfix was recently applied which handles the vast
majority (252/256) of cases.  However, in the method fails in the
four possible cases where two background pixels appear at opposite
corners of a 2x2x2 region, with foreground pixels elsewhere.
This patch handles these four cases manually.  Testing and
documentation are updated as appropriate.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CuberilleTests
   CuberilleTest01.cxx
   CuberilleTest02.cxx
   CuberilleTest03.cxx
+  CuberilleTest04.cxx
   )
 
 CreateTestDriver(Cuberille "${Cuberille-Test_LIBRARIES}" "${CuberilleTests}")
@@ -355,3 +356,6 @@ itk_add_test(NAME CuberilleTestDirectionMatrix
 
 itk_add_test(NAME CuberilleTestCellData
   COMMAND ${itk-module}TestDriver CuberilleTest03 )
+
+itk_add_test(NAME CuberilleTestNonManifoldGeometry
+  COMMAND ${itk-module}TestDriver CuberilleTest04 )
